2007-12-19 Peter Landgren <peter.talken@telai.com>
	* src/DbManager.py: fixed unique rename and new databases 
	* src/RecentFiles.py: fixed unique rename and new databases
			and update of recent-files.xml

2007-12-19 Benny Malengier <benny.malengier@gramps-project.org>
	* src/gen/lib/person.py: sources in attributes of eventref are not seen
		 in ref tables
	* src/gen/lib/eventref.py: can contain sources, add methods for that
	* src/gen/lib/notebase.py: whitespace

2007-12-18  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Editors/_EditFamily.py: doubleclick now edits; fixed share popup
	* src/DisplayTabs/_EmbeddedList.py: fixed share popup
	* src/DisplayTabs/_GalleryTab.py: fixed share popup

2007-12-18 Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/DetAncestralReport.py: Remove some test code

2007-12-17  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DbManager.py: I was having some weird issues with the archive
	file giving errors about "still in use". With these changes, I haven't
	had it happen... yet. Can't say for certain if these changes fixed it,
	or if there is another cause.

2007-12-17  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/CalculateEstimatedDates.py: Give good defaults for Filter 
	and Enumerated Lists
	* src/plugins/Calendar.py: Give good defaults for Filter and Enumerated
	lists
	* src/PluginUtils/_MenuOptions.py: added a get_filter() method to return
	filter object; added a param to constructor to set default filter

2007-12-16  Brian Matherly <brian@gramps-project.org>
	* src/plugins/Calendar.py: Properly initialize Filter option.
	* src/PluginUtils/_MenuOptions.py: Properly initialize Filter option.

2007-12-16  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/_PaperMenu.py: get margins in PaperFrame constructor
	* src/ReportBase/_DocReportDialog.py: pass margins to PaperFrame constructor
	* src/ReportBase/_ReportOptions.py: added getters/setters for margins
